# codenames

./: .gitignore  elo.py  example_actor_usage.py  model_names.py  pyproject.toml  requirements.txt  run_agents.py  test.py
agents/: agent.py  operative.py  operative_tools.py  prompts.py  spymaster.py  spymaster_tools.py  tool.py
configs/batch/: claude-sonnet_deepseek-v3-2-exp-thinking_1.yaml  claude-sonnet_gemini-2-5-pro_2.yaml  claude-sonnet_gpt-5_3.yaml  claude-sonnet_grok-4_4.yaml  claude-sonnet_kimi-k2-thinking_5.yaml  deepseek-v3-2-exp-thinking_gemini-2-5-pro_6.yaml  deepseek-v3-2-exp-thinking_gpt-5_7.yaml  deepseek-v3-2-exp-thinking_grok-4_8.yaml  deepseek-v3-2-exp-thinking_kimi-k2-thinking_9.yaml  gemini-2-5-pro_gpt-5_10.yaml  gemini-2-5-pro_grok-4_11.yaml  gemini-2-5-pro_kimi-k2-thinking_12.yaml  gpt-5_grok-4_13.yaml  gpt-5_kimi-k2-thinking_14.yaml  grok-4_kimi-k2-thinking_15.yaml
configs/model/: claude-sonnet.yaml
engine/: __init__.py  api.py  cli.py  game.py  game_main.py  main.py  schema.py
engine/boards/: __init__.py  (+2 more)
frontend/: .env.production  package-lock.json  package.json  vite.config.ts
logs/: claude-sonnet_deepseek-v3-2-exp-thinking_1.json  claude-sonnet_gpt-5_3.json  claude-sonnet_grok-4_4.json  deepseek-v3-2-exp-thinking_gemini-2-5-pro_6.json  deepseek-v3-2-exp-thinking_gpt-5_7.json  deepseek-v3-2-exp-thinking_grok-4_8.json  gemini-2-5-pro_gpt-5_10.json  gemini-2-5-pro_grok-4_11.json  gemini_human.json  gpt-5_grok-4_13.json  gpt-5_kimi-k2-thinking_14.json  gpt-5_kimi-k2-thinking_14_1.json  grok-4_human.json  grok-4_kimi-k2-thinking_15.json
(+16 files in other folders)
