[project]
name = "codenames"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifultable>=1.1.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "hydra-core>=1.3.2",
    "litellm>=1.74.1",
    "pydantic>=2.12.4",
]
